# SkillManager

./: .coverage  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pyrightconfig.json  ADR_INDEX.md  AGENTS.md  CHANGELOG.md  CategoryHeader.patch  DESIGN.md  LICENSE  README.md  TODO.md  Test.qml  coverage.json  debug_init.py  fix_border.py  fix_conflict.py  fix_coverage.py  fix_quotes_all.py  fix_test.py  fix_test_plan8.py  fix_tooltips.py  opencode.jsonc  patch.sh  patch_mock6.py  patch_search_10.py  patch_test.py  patch_test_dev_run.py  plan.md  pyproject.toml  python-modular-package-reorg.skill  repro_qml.py  resolver.py  ruff.toml  run.py  run_tests.py  skill-manager.bat  (+19 more)
.Jules/: bolt.md  palette.md  sentinel.md
.agent/context/memory/: state.md
.agents/commands/: Debug.md  Documents.md  New_Feature.md  Open_Source.md  PR_Merge.md  Parallel_Agents.md  Shadcn.md  Test_Fixing.md  Test_Generate.md  bolt.md  palette.md  sentinel.md
.agents/skills/: .antigravity-install-manifest.json
.agents/skills/brainstorming/: SKILL.md
.agents/skills/concise-planning/: SKILL.md
.agents/skills/conductor-implement/: SKILL.md
.agents/skills/documentation-templates/: SKILL.md
.agents/skills/github-actions-templates/: SKILL.md
.agents/skills/readme/: SKILL.md
.agents/skills/systematic-debugging/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  release-please-config.json
.github/workflows/: _build-pyinstaller.yml  _lint.yml  _security-scan.yml  _test-python.yml  ci.yml  prepare-release.yml  quality.yml  release-build.yml  release.yml
.github/workflows/_reusable/: build-pyinstaller.yml  lint.yml  security-scan.yml  setup-python-uv.yml  test-python.yml
.jules/: bolt.md  palette.md  sentinel.md
.opencode/plans/: auto-reset-collection-dropdown.md  drop-tuf-add-release-check.md
assets/brand/: logo.ai
conductor/: native-liquid-glass-plan.md  workflow.md
conductor/_archive/: design_decisions.md  plan.md  product.md  tech-stack.md  tracks.md
conductor/_archive/2026-06-22/: app_icon_plan_gui_script.md  command_deduplication_plan.md  debug-scroll.md  inspector-context-menu.md  performance_optimization.md  plan-screenshot-cancellation-ambiguity.md  plan-screenshot-cancellation-fix2.md  plan-screenshot-cancellation.md  plan-scroll-animation-fix.md  plan-scroll-lag-fix.md  plan-scrollbar.md  plan-ui-refresh.md  quick_copy_minimize_plan.md  refactor-app-update-controller.md  refactor-config-controller.md  refactor-discovery-controller.md  refactor-image-inspector.md  refactor-ops.md  refactor-schemas.md  refactor-screenshot.md  refactor-uicontroller.md  refactor-update-controller.md  screenshot-cancel-shortcut.md  screenshot-optimization-plan.md
conductor/_archive/2026-06-23/: README.md  patch_keys_revert.py
conductor/tracks/app_update_fixes/: metadata.json
conductor/tracks/auto-update_20260603/: metadata.json
conductor/tracks/collection_shortcut_20260620/: plan.md
conductor/tracks/command_skill_carry_20260623/: metadata.json  plan.md  spec.md
conductor/tracks/compact_ui_20260603/: plan.md
conductor/tracks/docs_update_20260603/: metadata.json
conductor/tracks/fix_package_add_snap_to_latest/: metadata.json  plan.md
conductor/tracks/fixes_and_coverage_20260607/: plan.md
conductor/tracks/freeze_popup_fix_20260701/: metadata.json  plan.md
conductor/tracks/multi_project_command_20260623/: metadata.json  plan.md
conductor/tracks/parallel_tests_20260604/: spec.md
conductor/tracks/quick_copy_minimize/: plan.md
data/: config.json  device_id.json  skill_library_archive.json  skill_library_clipboard.json  skill_library_index.json  temp_copies.json
docs/: API.md  ARCHITECTURE.md  CATEGORIES.md  CATEGORY_ICONS.md  CI_CD.md  CONTRIBUTING.md  DEVELOPMENT.md  ENVIRONMENT.md  HOUSEKEEPING.md  INSTALL.md  README.md  RELEASING.md  SECURITY.md  USER_GUIDE.md  VERSIONING.md
docs/API/: index.md
docs/adr/: 0000-template.md  ADR-0010-drop-tuf.md  ADR-0015-conductor-archival.md  ADR-0016-opencode-gitignore.md  ADR-0018-workspace-standardization.md  ADR-0019-multiprocessing-joblib.md  ADR-0020-command-skill-pills.md  ADR-0021-frozen-joblib-threads.md
environments/: .env.dev.example  .env.prod.example  .env.staging.example  README.md
packaging/: skill_manager.spec
packaging/windows/: Launch_SkillManager.vbs  build.ps1  installer.iss  sign-wrapper.bat  sign.ps1
scripts/: _launcher.py  build_app.py  dev_run.py  dev_test.py  publish_tuf_release.py  recover_settings.py  version_bump_calculator.py
scripts/diagnostics/: __init__.py  diag_app.py  diag_app_state.py  diag_config.py  diag_dedup.py  diag_dedup_direct.py  diag_dedup_force.py  diag_dedup_loop.py  diag_discovery.py  diag_diskcache.py  diag_full_stack.py  diag_ignore.py  diag_parse.py  diag_proj_files.py  diag_proj_incremental.py  diag_proj_print.py  diag_proj_raw.py  diag_qml_footer_fix.py  diag_setter.py
src/: posthog-setup-report.md
src/skill_manager/: __init__.py  __main__.py  _build.py  app.py  app.pyi  commit_parser_optin.py
tests/: _bootstrap.py  conftest.py  test_analytics.py  test_app_controller.py  test_app_dark_mode_native.py  test_app_helpers.py  test_app_initialization.py  test_app_startup.py  test_app_update_controller.py  test_app_update_diagnostic.py  test_app_update_e2e.py  test_app_update_progress_hook.py  test_app_update_sdet.py  test_build_dependencies.py  test_build_script.py  test_bulk_selection.py  test_carry_skills.py  test_categories.py  test_command_inspector_refresh_live.py  test_command_multi_project.py  test_command_referenced_skills_pills.py  test_command_targeted_refresh.py  test_commands.py  test_commit_parser_optin.py  test_config.py  test_config_controller.py  test_config_controller_missing_skills.py  test_config_sdet.py  test_controller_e2e_logic.py  test_cooperative_lock.py  test_copier.py  test_copier_commands.py  test_core_models_logic.py  test_core_parsing_edge_cases.py  test_core_skill_packages_logic.py  test_coverage_analytics_parsing.py  test_coverage_boost.py  test_coverage_core.py  test_coverage_relocator.py  test_data_loss_prevention.py  (+109 more)
(+205 files in other folders)
