[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
version = "1.0.1"
description = "A professional tool for managing reusable agent skills across repositories."
authors = [
    { name = "Don Dishan Kanchuka Agalawatta" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "httpx",
    "markdown-it-py",
    "pyyaml",
    "pywinstyles",
    "pathspec",
    "platformdirs",
    "posthog>=7.14.2",
    "pydantic>=2",
    "pydantic-settings",
    "python-frontmatter",
    "python-dotenv>=1.2.2",
    "rapidfuzz",
    "packaging",
    "tenacity",
    "watchdog",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "pytest-asyncio",
]
dev = [
    "ruff",
    "pyinstaller",
    "pillow",
]

[project.scripts]
skill-manager = "skill_manager.__main__:main"














[tool.setuptools.packages.find]
where = ["src"]
include = ["skill_manager*"]


[tool.coverage.run]
source = ["skill_manager"]
omit = ["src/skill_manager/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false


[tool.semantic_release]
version_variables = [
    "src/skill_manager/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
major_on_zero = true
vcs_release = true
upload_to_release = false
upload_to_pypi = false
remove_dist = false
patch_without_tag = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = []
patch_tags = []

[tool.semantic_release.remote]
name = "origin"
type = "github"













[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
    "python-semantic-release>=9.0.0",
]

